--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Fodoole Analytics SDK",
   "main": "core.js",
   "scripts": {
-    "test": "npx jest test"
+    "test": "npx jest test",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
   },
   "homepage": "https://github.com/fodoole/fodoole-analytics-sdk#readme",
   "devDependencies": {
+    "express": "^4.19.2",
     "jest": "^29.7.0"
   }
 }
