--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "core.js",
   "scripts": {
     "test": "npx jest test",
-    "start": "node index.js"
+    "start": "node index.js",
+    "build": "tsc && webpack"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,8 @@
     "express": "^4.19.2",
     "jest": "^29.7.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4"
   }
 }
