--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Fodoole Analytics SDK",
   "main": "core.js",
   "scripts": {
-    "test": "npx jest test",
+    "test": "npx jest test --watchAll=false --testTimeout=60000 --verbose --maxWorkers=1",
     "start": "node index.js",
     "build": "tsc && webpack"
   },
@@ -25,8 +25,10 @@
   },
   "homepage": "https://github.com/fodoole/fodoole-analytics-sdk#readme",
   "devDependencies": {
+    "@google-cloud/bigquery": "^7.8.0",
     "express": "^4.19.2",
     "jest": "^29.7.0",
+    "puppeteer": "^22.13.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "webpack": "^5.93.0",
