--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
   },
   "homepage": "https://github.com/fodoole/fodoole-analytics-sdk#readme",
   "devDependencies": {
+    "@babel/preset-env": "^7.25.0",
+    "@babel/preset-typescript": "^7.24.7",
     "@google-cloud/bigquery": "^7.8.0",
+    "babel-jest": "^29.7.0",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jest": "^29.7.0",
     "puppeteer": "^22.13.1",
