--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fodoole-analytics-sdk",
+  "name": "qeen-analytics-sdk",
   "version": "1.0.0",
   "description": "Fodoole Analytics SDK",
   "main": "core.js",
@@ -10,20 +10,20 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/fodoole/fodoole-analytics-sdk.git"
+    "url": "git+https://github.com/fodoole/qeen-analytics-sdk.git"
   },
   "keywords": [
-    "fodoole",
-    "fodoole-js",
+    "qeen",
+    "qeen-js",
     "analytics",
     "ai"
   ],
   "author": "Fodoole Fodoole LLC",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/fodoole/fodoole-analytics-sdk/issues"
+    "url": "https://github.com/fodoole/qeen-analytics-sdk/issues"
   },
-  "homepage": "https://github.com/fodoole/fodoole-analytics-sdk#readme",
+  "homepage": "https://github.com/fodoole/qeen-analytics-sdk#readme",
   "devDependencies": {
     "@babel/preset-env": "^7.25.0",
     "@babel/preset-typescript": "^7.24.7",
