--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "magic-string": "^0.30.11",
     "puppeteer": "^22.13.1",
     "react": "^18.3.1",
