--- a/examples/react/backend/package.json
+++ b/examples/react/backend/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "next": "^14.2.5",
+    "nextjs": "^0.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   }
