--- a/examples/endpoint/contentconfig/config.json
+++ b/examples/endpoint/contentconfig/config.json
@@ -1,23 +1,10 @@
 {
   "analyticsEndpoint": "http://localhost:8080/log",
   "projectId": "123456789",
-  "contentServingId": "123456789123456789",
-  "contentId": "optimised",
+  "contentServingId": "",
+  "contentId": "",
   "idleTime": 300000,
-  "rawContentSelectors": [
-    { 
-      "uid": "1",
-      "path": "#name",
-      "value": "{{nameToBeReplaced}}"
-    },
-    {
-      "uid": "2",
-      "path": "#description",
-      "value": "{{descriptionToBeReplaced}}"
-    }
-  ],
-  "contentSelectors": {
-    "#name": "{{nameToBeReplaced}}",
-    "#description": "{{descriptionToBeReplaced}}"
-  }
+  "isPdp": "",
+  "rawContentSelectors": [],
+  "contentSelectors": {}
 }
