--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "acorn-walk": "^8.3.3",
     "babel-jest": "^29.7.0",
     "dotenv": "^16.4.5",
+    "dotenv-webpack": "^8.1.0",
     "express": "^4.19.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
