added content status field

--- a/examples/config_server/contentconfig/config.json
+++ b/examples/config_server/contentconfig/config.json
@@ -3,6 +3,7 @@
   "projectId": "123456789",
   "contentServingId": "",
   "contentId": "",
+  "contentStatus": "",
   "idleTime": 300000,
   "isPdp": "",
   "rawContentSelectors": [],
