--- a/examples/config_server/contentconfig/config.json
+++ b/examples/config_server/contentconfig/config.json
@@ -2,6 +2,7 @@
   "requestUrl": "",
   "analyticsEndpoint": "http://localhost:8080/log",
   "projectId": "123456789",
+  "websiteId": "123456789",
   "contentServingId": "",
   "contentId": "",
   "contentStatus": "",
