--- a/package.json
+++ b/package.json
@@ -46,5 +46,8 @@
     "uglify-js": "^3.19.1",
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "typescript": "^5.7.2"
   }
 }
