--- a/examples/config_server/contentconfig/config.json
+++ b/examples/config_server/contentconfig/config.json
@@ -5,6 +5,7 @@
   "contentServingId": "",
   "contentId": "",
   "contentStatus": "",
+  "productId": "123456789",
   "idleTime": 300000,
   "isPdp": "",
   "rawContentSelectors": [],
